--- a/server/package.json
+++ b/server/package.json
@@ -24,6 +24,7 @@
     "cors": "^2.8.5",
     "express": "^4.18.2",
     "mocha": "^11.5.0",
+    "mongoose": "^8.15.0",
     "morgan": "^1.10.0",
     "nodemon": "^3.0.1"
   }
