--- a/server/package.json
+++ b/server/package.json
@@ -18,11 +18,14 @@
   },
   "homepage": "https://github.com/ironhack-labs/cohort-tools-project#readme",
   "dependencies": {
+    "bcryptjs": "^3.0.2",
     "chai": "^5.2.0",
     "chai-http": "^5.1.2",
     "cookie-parser": "^1.4.6",
     "cors": "^2.8.5",
     "express": "^4.18.2",
+    "express-jwt": "^8.5.1",
+    "jsonwebtoken": "^9.0.2",
     "mocha": "^11.5.0",
     "mongoose": "^8.15.0",
     "morgan": "^1.10.0",
