--- a/server/package.json
+++ b/server/package.json
@@ -25,10 +25,14 @@
     "cors": "^2.8.5",
     "express": "^4.18.2",
     "express-jwt": "^8.5.1",
+    "express-session": "^1.18.1",
+    "helmet": "^8.1.0",
     "jsonwebtoken": "^9.0.2",
     "mocha": "^11.5.0",
     "mongoose": "^8.15.0",
     "morgan": "^1.10.0",
-    "nodemon": "^3.0.1"
+    "nodemon": "^3.0.1",
+    "swagger-ui-express": "^5.0.1",
+    "yamljs": "^0.3.0"
   }
 }
