--- a/server/package.json
+++ b/server/package.json
@@ -5,7 +5,13 @@
   "main": "app.js",
   "scripts": {
     "dev": "nodemon app.js",
-    "test": "mocha"
+    "test": "cross-env NODE_ENV=test jest --testTimeout=5000 --detectOpenHandles"
+  },
+  "jest": {
+    "testEnvironment": "node",
+    "setupFilesAfterEnv": [
+      "<rootDir>/test/integration/setup.js"
+    ]
   },
   "repository": {
     "type": "git",
@@ -20,19 +26,29 @@
   "dependencies": {
     "bcryptjs": "^3.0.2",
     "chai": "^5.2.0",
-    "chai-http": "^5.1.2",
     "cookie-parser": "^1.4.6",
     "cors": "^2.8.5",
+    "csurf": "^1.11.0",
+    "dotenv": "^16.5.0",
     "express": "^4.18.2",
     "express-jwt": "^8.5.1",
+    "express-rate-limit": "^7.5.0",
     "express-session": "^1.18.1",
     "helmet": "^8.1.0",
     "jsonwebtoken": "^9.0.2",
     "mocha": "^11.5.0",
+    "mongo-sanitize": "^1.1.0",
+    "mongodb-memory-server": "^10.1.4",
     "mongoose": "^8.15.0",
     "morgan": "^1.10.0",
     "nodemon": "^3.0.1",
+    "supertest": "^7.1.1",
     "swagger-ui-express": "^5.0.1",
     "yamljs": "^0.3.0"
+  },
+  "devDependencies": {
+    "chai-http": "^5.1.2",
+    "cross-env": "^7.0.3",
+    "jest": "^29.7.0"
   }
 }
